force-app/main/default/objects/Currency__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>