force-app/main/default/objects/Currency__c/fields/Decimal__c.field-meta.xml
<CustomField>
    <fullName>Decimal__c</fullName>
    <label>Decimal digits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>