force-app/main/default/objects/Currency__c/fields/Name_plural__c.field-meta.xml
<CustomField>
    <fullName>Name_plural__c</fullName>
    <label>Name plural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>