force-app/main/default/objects/Currency__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>