force-app/main/default/objects/Currency__c/fields/Symbol_native__c.field-meta.xml
<CustomField>
    <fullName>Symbol_native__c</fullName>
    <label>Symbol native</label>
    <length>10</length>
    <type>Text</type>
</CustomField>