force-app/main/default/objects/Currency__c/fields/Sync_daily__c.field-meta.xml
<CustomField>
    <fullName>Sync_daily__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Currency needs to be retrieved on a daily basis by the schedule process</description>
    <label>Sync daily</label>
    <type>Checkbox</type>
</CustomField>