force-app/main/default/objects/Currency__c/fields/USD_rate__c.field-meta.xml
<CustomField>
    <fullName>USD_rate__c</fullName>
    <label>USD rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>